// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`increment gallery site with cached scraper should make the expected requests on first pass 1`] = `
Array [
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "three",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`increment gallery site with instant scraper should group each image into a separate slot, in order 1`] = `
Array [
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`increment gallery site with instant scraper should group tags and images together that were found on the same page 1`] = `
Array [
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "three",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`increment gallery site with psuedo-random delayed scraper should keep images and tags together, in order 1`] = `
Array [
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "three",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`increment gallery site with value limit should group each image into a separate slot, in order 1`] = `
Array [
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts with cached scraper should make the expected requests on first pass 1`] = `
Array [
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "three",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts with instant scraper should group each image into a separate slot, in order 1`] = `
Array [
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts with instant scraper should group tags and images together that were found on the same page 1`] = `
Array [
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "three",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts with psuedo-random delayed scraper should keep images and tags together, in order 1`] = `
Array [
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "three",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts with value limit should group each image into a separate slot, in order 1`] = `
Array [
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;
